<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <com.google.android.material.button.MaterialButton
            android:text="@string/upload_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnUploadData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            style="@style/PrimaryButton"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            style="@style/TextAppearance.AppCompat.Large"/>
    <com.google.android.material.button.MaterialButton
            style="@style/PrimaryButton"
            android:text="@string/view_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnViewData"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnUploadData"
            app:layout_constraintStart_toStartOf="@+id/btnUploadData"
            app:layout_constraintEnd_toEndOf="@+id/btnUploadData"
    />
    <com.google.android.material.button.MaterialButton
            android:text="@string/record"
            android:layout_width="0dp"
            style="@style/SecondaryButton"
            android:layout_height="wrap_content"
            android:id="@+id/btnRecordScreen"
            app:layout_constraintEnd_toEndOf="@+id/btnViewData"
            app:layout_constraintStart_toStartOf="@+id/btnViewData"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnViewData"/>
    <TextView
            android:text="@string/created_by_4plus_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtLink"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRecordScreen"
            app:layout_constraintVertical_bias="1.0"
            android:textColor="#1188ff"
            android:textSize="16sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>