<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:srcCompat="@tools:sample/avatars[14]"
                android:id="@+id/imageView"
                android:background="@drawable/ic_mic"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                android:layout_marginTop="8dp"
                style="@style/LargeTitle"/>
        <TextView
                android:text="@string/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="@string/team"
                style="@style/LargeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_group"
                android:drawablePadding="8dp"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                android:layout_marginTop="16dp"
                android:id="@+id/textView10"/>
        <TextView
                android:text="Amol Gaikawad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"/>
        <TextView
                android:text="Kubre (kubre.in)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtLinkKubreWebsite"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:autoLink="web" android:layout_marginTop="4dp"/>
        <TextView
                android:text="@string/app_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLinkKubreWebsite"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp" android:textSize="14sp" android:autoLink="web|email"
                app:autoSizeTextType="uniform" android:textAlignment="textStart" android:autoText="false"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>