<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecordActivity">

    <com.google.android.material.card.MaterialCardView
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/cardSampleSettings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="16sp" android:layout_marginTop="8dp"/>

            <TextView
                    android:text="Profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtProfileName"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/secondaryDarkColor"
                    android:tint="@color/primaryColor"
                    app:srcCompat="@drawable/ic_edit"
                    android:id="@+id/btnEditProfile"
                    app:layout_constraintStart_toEndOf="@+id/txtProfileName"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtProfileName"
                    app:layout_constraintTop_toTopOf="@+id/txtProfileName"/>
            <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    android:checkedButton="@id/rdbMono">
                <com.google.android.material.radiobutton.MaterialRadioButton
                        android:text="@string/mono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdbMono"
                        android:textColor="@color/primaryTextColor"
                        android:layout_marginRight="40dp"
                        android:onClick="onSelectChannel"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                        android:text="@string/stereo"
                        android:layout_width="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdbStereo"
                        android:onClick="onSelectChannel"/>
            </RadioGroup>
            <TextView
                    android:text="@string/channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/textView5"/>
            <TextView
                    android:text="@string/sampling_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView2"
                    android:textSize="16sp" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"/>

            <ImageButton
                    android:src="@drawable/ic_edit"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/secondaryDarkColor"
                    android:tint="@color/primaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnChangeFrequency"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/txtSelectedFrequency"
                    android:layout_marginStart="16dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSelectedFrequency"
                    app:layout_constraintTop_toTopOf="@+id/txtSelectedFrequency"
                    android:textSize="12sp"/>
            <TextView
                    android:text="Data File"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDataFileName"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"/>
            <TextView
                    android:text="Data File"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/txtSelectedFrequency" android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="@+id/txtSelectedFrequency" android:textSize="16sp"/>

            <TextView
                    android:text="8000Hz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSelectedFrequency"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_circle_shape"
            app:srcCompat="@drawable/ic_mic"
            android:id="@+id/btnRecord"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toEndOf="@+id/btnPlay"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btnNext"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/recorderAmplitudeBar"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_circle_shape"
            app:srcCompat="@drawable/ic_play"
            android:id="@+id/btnPlay"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:scaleType="fitXY"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnRecord"
            app:layout_constraintTop_toTopOf="@+id/btnRecord" app:layout_constraintBottom_toBottomOf="@+id/btnRecord"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_circle_shape"
            app:srcCompat="@drawable/ic_check"
            android:id="@+id/btnNext"
            android:layout_marginBottom="24dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnRecord"
            android:scaleType="fitXY" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.2"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/btnRecord"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/btnRecord"
            app:layout_constraintHorizontal_bias="0.5"/>

    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:id="@+id/recorderAmplitudeBar"
            android:progressDrawable="@drawable/amplitude_bar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:max="100"
            android:progress="0"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardSampleSettings" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
            android:id="@+id/materialCardView">
        <com.google.android.material.textview.MaterialTextView
                android:text="Text To Speak"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtToRecord"
                android:textAlignment="center"
                android:textSize="30sp"/>
    </com.google.android.material.card.MaterialCardView>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.59"/>
</androidx.constraintlayout.widget.ConstraintLayout>